self-hosted-services/go2rtc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go2rtc
  namespace: go2rtc
  labels:
    app.kubernetes.io/name: go2rtc
spec:
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: go2rtc
  template:
    metadata:
      labels:
        app.kubernetes.io/name: go2rtc
    spec:
      nodeSelector:
        feature.node.kubernetes.io/usb-ef_0c45_6366.present: "true"
      volumes:
        - name: host-dev
          hostPath:
            path: /dev
            type: Directory
        - name: config
          configMap:
            name: go2rtc-config
      containers:
        - name: go2rtc
          # renovate: datasource=docker depname=alexxit/go2rtc versioning=semver
          image: alexxit/go2rtc:1.9.8
          args:
            - "-c"
            - "/config/go2rtc.yaml"
          securityContext:
            privileged: true
          ports:
            - containerPort: 1984
              name: http
            - containerPort: 8554
              name: rtsp
            - containerPort: 8555
              name: webrtc
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: 1984
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 1984
            initialDelaySeconds: 3
            periodSeconds: 10
          volumeMounts:
            - mountPath: /dev/host
              name: host-dev
            - mountPath: /config/go2rtc.yaml
              name: config
              subPath: go2rtc.yaml
