self-hosted-services/go2rtc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go2rtc-service
  namespace: go2rtc
  labels:
    app.kubernetes.io/name: go2rtc
spec:
  selector:
    app.kubernetes.io/name: go2rtc
  ports:
    - name: http
      port: 1984
      targetPort: 1984
    - name: rtsp
      port: 8554
      targetPort: 8554
