self-hosted-services/go2rtc/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go2rtc-route
  namespace: go2rtc
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: crobceratops-gateway
      namespace: gateways
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: crobasaurusrex-gateway
      namespace: gateways
  hostnames:
    - go2rtc.crobceratops.ryanbeales.com
    - go2rtc.crobasaurusrex.ryanbeales.com
    - camera.crobceratops.ryanbeales.com
    - camera.crobasaurusrex.ryanbeales.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: go2rtc-service
          port: 1984
          weight: 1
